<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tien.SanPhamActivity"
    android:background="@color/primary"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    android:paddingHorizontal="24dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            style="@style/style_logo"
            android:src="@drawable/icon" />

        <TextView
            style="@style/style_title"
            android:text="@string/them_san_pham"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgTSPHinh"
        android:layout_width="304dp"
        android:layout_height="266dp"
        android:layout_gravity="center"
        android:src="@drawable/empty" />

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:background="@drawable/white_border_2">
        <EditText
            android:id="@+id/txtTSPTen"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:hint="@string/ten_san_pham"
            android:textColorHint="@color/hint"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:background="@drawable/white_border_2">
        <EditText
            android:id="@+id/txtTSPGia"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:hint="@string/don_gia"
            android:textColorHint="@color/hint"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:background="@drawable/white_border_2">
        <EditText
            android:id="@+id/txtTSPXuatXu"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:hint="@string/xuat_xu"
            android:textColorHint="@color/hint"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:orientation="horizontal"
        android:background="@drawable/white_border_2">
        <EditText
            android:id="@+id/txtTSPHinh"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:textSize="18dp"
            android:hint="@string/link_hinh_anh"
            android:textColorHint="@color/hint"
            android:textColor="@color/black"/>
        <Button
            android:id="@+id/btn_xem_truoc_hinh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/xem"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_them_sp_dong_y"
            android:background="@drawable/nut_them_sp_dong_y"
            android:text="@string/dong_y"
            style="@style/style_pill_button"
            ></TextView>

        <TextView
            android:id="@+id/btn_them_sp_huy"
            android:background="@drawable/white_border_background"
            style="@style/style_pill_button"
            android:textColor="@color/primary"
            android:text="@string/huy"
           ></TextView>

    </LinearLayout>






</LinearLayout>