<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical"
    android:weightSum="6.5"
    tools:context="khachhang.ActivityThemKhachHang"
    android:paddingHorizontal="24dp">


    <LinearLayout style="@style/style_header_layout">

        <ImageView
            style="@style/style_logo"
            android:src="@drawable/icon" />

        <TextView
            style="@style/style_title"
            android:text="@string/them_khachhang" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginTop="48dp">

        <ImageView
            android:id="@+id/iv_avatarKH"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"

            android:src="@drawable/avatar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/blackboder_whitebackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_avatarKH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/source_img"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#AFA7A7"
                android:textSize="16dp" />


            <LinearLayout
                android:id="@+id/btn_ChonAnh"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginLeft="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/folder_icon" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_Camera"
                android:layout_width="50dp"
                android:layout_height="53dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/camera_icon" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/ed_tenKH"
            style="@style/ed_Text"
            android:hint="@string/ten_khachhang" />

        <EditText
            android:id="@+id/ed_soDT_KH"
            style="@style/ed_Text"
            android:hint="@string/soDT"
            android:inputType="phone"
            android:maxLength="10" />

        <EditText
            android:id="@+id/ed_diaChiKH"
            style="@style/ed_Text"
            android:hint="@string/dia_chi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_themKH"
                style="@style/btn_Them"
                android:text="@string/btn_them" />

            <Button
                android:id="@+id/btn_huyThemKH"
                style="@style/btn_Huy"
                android:text="@string/btn_huy" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>