<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingHorizontal="32dp"
    android:paddingBottom="12dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center"
        android:background="@drawable/top_border_radius"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_success"/>
        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/canh_bao"
            android:textSize="24dp"
            android:textAlignment="center"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bottom_border_radius"
        android:orientation="vertical"
        android:minHeight="120dp"
        >
        <TextView
            android:id="@+id/txt_success_noi_dung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ten_san_pham"
            android:textSize="24dp"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:textAlignment="center"/>

            <TextView
                android:id="@+id/btn_success_dong_y"
                android:layout_width="146dp"
                android:layout_height="44dp"
                android:background="@drawable/nut_confirm_dong_y"
                android:text="@string/dong_y"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textAlignment="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginTop="32dp"
                >
            </TextView>

    </LinearLayout>


    

</LinearLayout>