<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".tien.ThongTinSanPhamActivity">

    <LinearLayout
        android:id="@+id/ll_ttsp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="12dp"
                android:text="@string/thong_tin_san_pham"
                android:textColor="@color/primary"
                android:textSize="48dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgTTSPHinh"
            android:layout_width="360dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/sanpham" />

        <TextView
            android:id="@+id/txtTTSPTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:text="@string/san_pham"
            android:textColor="@color/black"
            android:textSize="32dp" />

        <TextView
            android:id="@+id/txtTTSPGia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/san_pham"
            android:textColor="@color/primary"
            android:textSize="28dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_san_pham"
                android:textColor="@color/black"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/txtTTSPMa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_san_pham"
                android:textAlignment="viewEnd"
                android:textColor="#666666"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/xuat_xu"
                android:textColor="@color/black"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/txtTTSPXuatXu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_san_pham"
                android:textAlignment="viewEnd"
                android:textColor="#666666"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_sua_sp"
                android:layout_width="146dp"
                android:layout_height="44dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/nut_sua_sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/sua"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"></TextView>

            <TextView
                android:id="@+id/btn_xoa_sp"
                android:layout_width="146dp"
                android:layout_height="44dp"
                android:background="@drawable/nut_xoa_sp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/xoa"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"></TextView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_suattsp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:context=".tien.ThongTinSanPhamActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="143dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:src="@drawable/icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="139dp"
                android:gravity="center_vertical"
                android:paddingHorizontal="12dp"
                android:text="@string/sua_thong_tin_san_pham"
                android:textColor="@color/primary"
                android:textSize="32dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgSTTSPHinh"
            android:layout_width="360dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:src="@drawable/sanpham" />

        <EditText
            android:id="@+id/txtSTTSPTen"
            android:singleLine="true"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="12dp"
            android:gravity="center"
            android:text="@string/san_pham"
            android:textColor="@color/black"
            android:textSize="32dp" />

        <EditText
            android:id="@+id/txtSTTSPGia"
            android:singleLine="true"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/san_pham"
            android:textColor="@color/primary"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_san_pham"
                android:textColor="@color/black"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/txtSTTSPMa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_san_pham"
                android:textAlignment="viewEnd"
                android:textColor="#666666"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/xuat_xu"
                android:textColor="@color/black"
                android:textSize="22dp" />

            <EditText
                android:id="@+id/txtSTTSPXuatXu"
                android:layout_width="80dp"
                android:singleLine="true"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ma_san_pham"
                android:textAlignment="viewEnd"
                android:textColor="#666666"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn_sua_ttsp_dong_y"
                android:layout_width="146dp"
                android:layout_height="44dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/nut_confirm_dong_y"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/dong_y"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20dp"></TextView>

            <TextView
                android:id="@+id/btn_sua_ttsp_huy"
                android:layout_width="146dp"
                android:layout_height="44dp"
                android:background="@drawable/nut_huy_gray"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/huy"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20dp"></TextView>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
