<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_2"
    android:descendantFocusability="blocksDescendants"
    android:orientation="horizontal">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_border_background"
        android:columnCount="5"
        android:padding="16dp"
        android:rowCount="3">

        <ImageView
            android:id="@+id/iv_itemchonmathang_hinhanhsanpham"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:layout_rowSpan="3"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:src="@drawable/sanpham" />

        <TextView
            android:id="@+id/tv_itemchonmathang_tensanpham"
            android:layout_width="160dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="left|top"
            android:text="@string/ten_san_pham"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginLeft="12dp"/>

        <TextView
            android:id="@+id/tv_itemchonmathang_masanpham"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="left|top"
            android:text="@string/ma_san_pham"
            android:textColor="#7A000000"
            android:textSize="15dp"
            android:layout_marginLeft="12dp"/>

        <LinearLayout
            android:layout_row="2"
            android:layout_column="1"
            android:layout_columnSpan="3"
            android:layout_gravity="left|bottom"
            android:orientation="horizontal"
            android:layout_marginLeft="12dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|bottom"
                android:paddingRight="20dp"
                android:text="Giá tiền"
                android:textColor="#127516" />

            <TextView
                android:id="@+id/tv_itemchonmathang_giatiensanpham"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right|bottom"
                android:text="300000"
                android:textColor="#127516" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_itemchonmathang_chon"
            android:layout_width="50dp"
            android:layout_row="0"
            android:layout_rowSpan="3"
            android:layout_column="4"
            android:layout_gravity="center_vertical"
            android:background="@drawable/orange_border_button"
            android:text="@string/xem"
            android:textColor="@color/white"
            android:textSize="10dp" />


    </GridLayout>

</LinearLayout>